Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -247,12 +247,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "countries.append(\"Malta\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -267,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append(\"Malta\")"
+    "countries.append(\"Thailand\")"
    ]
   },
   {
